@@ -34,7 +34,7 @@ my @gcds = (
   [ [-5,7], 1],
 );
 my @lcms = (
-  [ [], 0],
+  [ [], 1],
   [ [8], 8],
   [ [9,9], 9],
   [ [0,0], 0],
